syntax = "proto3";

package astria.protocol.transaction.v1alpha1;

import "astria/protocol/transaction/v1alpha1/action.proto";
import "astria/protocol/transaction/v1alpha1/transaction_params.proto";

// The `TransactionBody` of the `Transaction` that is being signed over.
// It contains transaction `TransactionParams` and `Actions`.
message TransactionBody {
  TransactionParams params = 1;
  repeated Action actions = 2;
}
